--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -30,32 +30,50 @@
     color: white !important;
 }
 
+.LG_SU-background {
+    background-color: white;
+    width: 50vw;
+    padding: 7%;
+    padding-bottom: 0;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
+.LG_SUtitle {
+    color: #6AA87D;
+    font-size: 40px;
+    font-weight: bold;
+    padding-bottom: 2%;
+    padding-top: 13%;
+}
 
+.image {
+    width: 50vw;
+}
 
-.pageButton {
-    background-color: #06b09a !important;
+.btn-outline2 {
+    background-color: #6AA87D !important;
     color: white !important;
     border: none !important;
 }
 
-.pageButton:hover {
+.btn-outline2:hover {
     background-color: transparent !important;
-    color: #06b09a !important;
-    outline: 1px solid #06b09a !important;
+    color: #6AA87D !important;
+    outline: 1px solid #6AA87D !important;
 }
 
-.background-container {
-    position: relative;
-    background-image: url('https://media.licdn.com/dms/image/v2/D4E12AQF3d45aI5_PJA/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1704399573262?e=2147483647&v=beta&t=SicpL2SALH8CAVibZq6tXr66mifBP1uiKPFZzylzlyQ');
-    background-size: cover;
-    background-position: center;
-    height: 565px;
-    width: 100%;
+.redireccionamiento {
+    font-size: 12px;
+    display: flex;
+    margin-top: 20px;
+    gap: 5px;
+    justify-content: center;
 }
 
-.paddingTop {
-    padding-top: 66px;
+.textColor {
+    color: #6AA87D;
 }
 
 .overlay {
@@ -69,8 +87,16 @@
 }
 
 #ovl1 {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.8);
 }
+
+.paddingTop {
+    padding-top: 66px;
+}
+
+
+
+
 
 .title {
     font-size: 50px;
@@ -87,43 +113,17 @@
     font-weight: 200;
 }
 
-.LG_SU-background {
-    background-color: white;
-    width: 50%;
-    padding: 7%;
-    padding-bottom: 0;
-    justify-content: center;
-    align-items: center;
-    height: 631px;
-}
 
-.image {
-    width: 50%;
-}
+
+
 
 .ovl2 {
     background: rgba(0, 0, 0, 0.1);
 }
 
-.alternativa {
-    font-size: 12px;
-    display: flex;
-    margin-top: 20px;
-    gap: 5px;
-    justify-content: center;
-}
 
-.textColor {
-    color: #06b09a;
-}
 
-.LG_SUtitle {
-    color: #06b09a;
-    font-size: 40px;
-    font-weight: bold;
-    padding-bottom: 2%;
-    padding-top: 13%;
-}
+
 
 #logo {
     position: fixed;
