--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 .background-image {
     position: relative;
     background-image: url('/images/Fondo1.jpg');
@@ -94,8 +95,6 @@
     padding-top: 66px;
 }
 
-
-
 .title {
     font-size: 50px;
     font-weight: bold;
@@ -110,10 +109,6 @@
     font-size: 20px;
     font-weight: 200;
 }
-
-
-
-
 
 .ovl2 {
     background: rgba(0, 0, 0, 0.1);
@@ -141,8 +136,6 @@
     display: flex;
     width: 53%;
 }
-
-
 
 .overlay2 {
     position: relative;
@@ -374,33 +367,108 @@
   }
   
   #sidebarMenu { 
-    background-color: #f7f7f7; 
+    background-color: #ffffff; 
     text-align: left;
     font-family: 'Courier New', Courier, monospace;
     font-size: large;
     align-items: center;
     padding: 12px;
     max-width: 360px;
+    position: fixed;
   }
   #sidebarMenu button {
     padding: 20px;
     align-self: flex-end;
-  }
+   
+  } #main{
+    }
+
   #landing {
+    padding: 5%;
     background-color: #9ccc9e;
-    height: 300px;
+    height: 40vh;
     text-align: center;
     justify-items: center;
+    align-content: center;
+    text-shadow: #0f2225;
+    font-style: bold;
+    color: white;
+    font-size: 60px;
+    margin: 0 auto;
   }
   #actividades {
-    background-color:rgba(158,204,158,255);
-    height: 300px;
+    /* background-color:rgba(158,204,158,255); */
+    background-color:#8bc99b ;
+    height: 60vh;
     text-align: center;
     justify-items: center;
+    align-content: center;
+    padding: 5%;
+    font-size: large;
+    color: white;
+  }
+  #actividades p {
+   
   }
 
-/*   #main {
-    display: flex-column;
-    height: fullscreen;  
-  } */
+  @keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.fade-in {
+    animation: fadeIn 0.5s ease-in-out;
+  }
+  #btngroup {
+    text-align: center;
+    justify-items: center;
+    align-content: center;
+
+  }
+  .btn-selected {
+    background-color: #9a6ac4;
+    color: white;
+  }
+
+  .btn-act {
+    background-color: #e6ffeee0 !important;
+    color: #4a7557 !important;
+    border: none !important;
+}
+
+.btn-act:hover {
+    background-color: #4a7557 !important;
+    color: white !important;
+}
+.btn-tipo {
+    height: 50px;
+    width: 300px;
+    background-color: #c46aa2 !important;
+    color: #f6dbef !important;
+    border: none !important;
+}
+
+.btn-tipo:hover {
+    background-color: #a54480 !important;
+    color: white !important;
+}
+.pt-sans-regular {
+    font-family: "PT Sans", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+.ibm-plex-sans-pSans {
+    font-family: "IBM Plex Sans", serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
   
