--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 .background-image {
     position: relative;
     background-image: url('/images/Fondo1.jpg');
@@ -31,26 +32,64 @@
     color: white !important;
 }
 
-.LG_SU-background {
-    background-color: white;
-    width: 50vw;
-    padding: 7%;
-    padding-bottom: 0;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
 .LG_SUtitle {
     color: #6AA87D;
     font-size: 40px;
     font-weight: bold;
     padding-bottom: 2%;
-    padding-top: 13%;
 }
 
 .image {
-    width: 50vw;
+    flex: 1;
+    position: relative;
+}
+
+.image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.container-grid {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-section,
+.image {
+    flex: 1;
+    height: 100%;
+}
+
+.form-section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    padding: 20px;
+    position: relative;
+}
+
+.back {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    z-index: 10;
+}
+
+/* Responsive */
+@media screen and (max-width: 768px) {
+    .image {
+        display: none;
+    }
+
+    .form-section {
+        flex: 1;
+    }
 }
 
 .btn-outline2 {
@@ -129,13 +168,7 @@
     font-weight: 800;
 }
 
-.back {
-    padding-top: 1%;
-    padding-right: 1%;
-    align-items: center;
-    display: flex;
-    width: 53%;
-}
+
 
 .overlay2 {
     position: relative;
@@ -361,13 +394,13 @@
 }
 
 .sidebar {
-    height: 100vh;     
-    position: sticky;   
-    top: 0;       
-  }
-  
-  #sidebarMenu { 
-    background-color: #ffffff; 
+    height: 100vh;
+    position: sticky;
+    top: 0;
+}
+
+#sidebarMenu {
+    background-color: #ffffff;
     text-align: left;
     font-family: 'Courier New', Courier, monospace;
     font-size: large;
@@ -375,15 +408,17 @@
     padding: 12px;
     max-width: 360px;
     position: fixed;
-  }
-  #sidebarMenu button {
+}
+
+#sidebarMenu button {
     padding: 20px;
     align-self: flex-end;
-   
-  } #main{
-    }
 
-  #landing {
+}
+
+#main {}
+
+#landing {
     padding: 5%;
     background-color: #9ccc9e;
     height: 40vh;
@@ -395,11 +430,12 @@
     color: white;
     font-size: 60px;
     margin: 0 auto;
-  }
-  #actividades {
+}
+
+#actividades {
     /* background-color:rgba(158,204,158,255); */
     /* background-color:#8bc99b ; */
-    background: linear-gradient(to bottom,#8bc99b,#47d2a6 );
+    background: linear-gradient(to bottom, #8bc99b, #47d2a6);
     height: 70vh;
     text-align: center;
     justify-items: center;
@@ -407,32 +443,34 @@
     padding: 5%;
     font-size: large;
     color: white;
-  }
-  #actividades p {
-   
-  }
-
-  @keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
+
+#actividades p {}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .fade-in {
     animation: fadeIn 0.5s ease-in-out;
-  }
-  #btngroup {
+}
+
+#btngroup {
     text-align: center;
     justify-items: center;
     align-content: center;
 
-  }
+}
 
-  .btn-act {
+.btn-act {
     background-color: #e6ffeee0 !important;
     color: #4a7557 !important;
     border: none !important;
@@ -444,23 +482,26 @@
     background-color: #4a7557 !important;
     color: white !important;
 }
+
 .btn-tipo {
     height: 50px;
     width: 220px;
-    color: #4a7557 !important ;
+    color: #4a7557 !important;
     background-color: none !important;
-    color: #4a7567 ;
+    color: #4a7567;
     border: 2px solid rgb(255, 255, 255) !important;
-    border-style:groove ;
+    border-style: groove;
     /* background-color: #c46aa2 !important;
     color: #f6dbef !important; */
 }
+
 .btn-tipo.btn-selected {
     /* background-color: #9f4e78 !important;  */
     background-color: #e6ffeee0 !important;
     color: #4a7557;
     border: none !important;
-  }
+}
+
 .btn-tipo:hover {
     background-color: #e6ffeee0 !important;
     color: #47d2a6 !important;
@@ -472,14 +513,13 @@
     font-family: "PT Sans", serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
+}
+
 .ibm-plex-sans-pSans {
     font-family: "IBM Plex Sans", serif;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
     font-variation-settings:
-      "wdth" 100;
-  }
-  
+        "wdth" 100;
+}
