--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -601,9 +601,22 @@
     text-align: center;
   }
 
+  #flashcard-container {
+     /* width: 800px;
+   height: 80vh;
+
+    justify-content: center;
+    text-align: center; */
+    
+  }
+  #progress-flashcard {
+    margin:38px;
+
+  }
+
   .flashcard {
-    width: 300px;
-    height: 200px;
+    width: 600px;
+    height: 300px;
     perspective: 1000px;
     cursor: pointer;
     margin: 20px;
@@ -625,6 +638,7 @@
   
   .flashcard-front,
   .flashcard-back {
+    padding: 20px;
     position: absolute;
     width: 100%;
     height: 100%;
