--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -288,8 +288,13 @@
 #sidebarMenu button {
     padding: 20px;
     align-self: flex-end;
+    cursor: pointer;
 
 }
+#sidebarMeu a {
+    cursor: pointer;
+}
+
 
 #landing {
     padding: 5%;
