--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,6 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  
 }
 
 body {
@@ -40,19 +39,20 @@ a {
   html {
     color-scheme: dark;
   }
-  
+
 }
 
-@media (min-width: 768px) {
-  #main,mainR {
-    margin-left: 33% !important;
-    padding:0.5%; 
-    width: 65%;  
+@media (min-width: 768px) and (max-width: 991px) {
+  #main {
+    margin-left: 0 !important;
+    width: 100% !important;
   }
+
   #mainR .col-md-9 {
     flex: 0 0 auto;
     width: 64% !important;
   }
+
   #sidebarMenu {
     width: 35%;
     position: fixed !important;
@@ -63,20 +63,24 @@ a {
 
 @media (min-width: 992px) {
   #mainR .col-lg-9 {
-      flex: 0 0 auto;
-      width: 65% !important;
+    flex: 0 0 auto;
+    width: 65% !important;
   }
 }
 
 @media (min-width: 1024px) {
-  #main,mainR{
+
+  #main,
+  mainR {
     margin-left: 33% !important;
-    width: 69%; 
+    width: 69%;
   }
+
   #mainR .col-md-9 {
     flex: 0 0 auto;
     width: 62% !important;
   }
+
   #sidebarMenu {
     width: 35%;
     position: fixed !important;
@@ -84,15 +88,20 @@ a {
     visibility: visible !important;
   }
 }
+
 @media (min-width: 1124px) {
-  #main,mainR {
+
+  #main,
+  mainR {
     margin-left: 25% !important;
-    width: 77%; 
+    width: 77%;
   }
+
   #mainR .col-md-9 {
     flex: 0 0 auto;
     width: 70% !important;
   }
+
   #sidebarMenu {
     width: 35%;
     position: fixed !important;
@@ -100,15 +109,20 @@ a {
     visibility: visible !important;
   }
 }
+
 @media (min-width: 1324px) {
-  #main,mainR {
+
+  #main,
+  mainR {
     margin-left: 10% !important;
     width: 100%;
   }
+
   #mainR .col-md-9 {
     flex: 0 0 auto;
     width: 74% !important;
   }
+
   #sidebarMenu {
     width: 35% !important;
     position: fixed !important;
@@ -116,6 +130,7 @@ a {
     visibility: visible !important;
   }
 }
+
 @media (min-width: 1624px) {
 
   #mainR .col-md-9 {
@@ -123,4 +138,3 @@ a {
     width: 77% !important;
   }
 }
-
